--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.18.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -26,7 +26,8 @@ dependencies:
   sqflite: ^2.0.3
   just_the_tooltip: ^0.0.12
   video_player: ^2.6.1
-  flutter_native_splash: ^2.2.9
+  another_flutter_splash_screen: ^1.1.4
+  pulse_widget: ^0.0.2
 
 dev_dependencies:
   flutter_test:
