--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   video_player: ^2.6.1
   another_flutter_splash_screen: ^1.1.4
   pulse_widget: ^0.0.2
+  intl: ^0.18.1
+  filesystem_picker: ^3.1.0
+  easy_folder_picker: ^1.3.1
+  permission_handler: ^10.4.3
 
 dev_dependencies:
   flutter_test:
