--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.18.2 <3.0.0"
+  sdk: ">=2.17.3 <3.0.0"
 
 dependencies:
   flutter:
@@ -25,13 +25,12 @@ dependencies:
   uuid: ^3.0.7
   sqflite: ^2.0.3
   just_the_tooltip: ^0.0.12
-  video_player: ^2.6.1
   another_flutter_splash_screen: ^1.1.4
   pulse_widget: ^0.0.2
   intl: ^0.18.1
   filesystem_picker: ^3.1.0
-  easy_folder_picker: ^1.3.1
-  permission_handler: ^10.4.3
+  url_launcher: ^6.1.12
+  video_player: ^2.7.0
 
 dev_dependencies:
   flutter_test:
