--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ flutter:
     - assets/logo_alt.png
     - assets/logo_white.png
     - assets/buymeacoffee.png
+    - assets/buymeacoffeeblack.png
+    - assets/linkedin.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
