--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   permission_handler: ^10.4.3
   device_info_plus: ^9.0.3
   chewie: ^1.7.0
+  cryptography: ^2.5.0
+  convert: ^3.1.1
+  encrypt: ^5.0.1
 
 dev_dependencies:
   flutter_test:
