Finished adding mood tracker, and change of color

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ flutter:
     - assets/buymeacoffee.png
     - assets/buymeacoffeeblack.png
     - assets/linkedin.png
+    - assets/ad1.jpg
+    
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
