--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.2+6
+version: 1.0.2+7
 
 environment:
   sdk: ">=2.17.3 <3.0.0"
@@ -39,6 +39,7 @@ dependencies:
   encrypt: ^5.0.1
   fl_chart: ^0.63.0
   syncfusion_flutter_charts: ^23.1.36
+  shake: ^2.2.0
 
 dev_dependencies:
   flutter_test:
