--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.2+7
+version: 1.0.3+8
 
 environment:
   sdk: ">=2.17.3 <3.0.0"
@@ -40,6 +40,7 @@ dependencies:
   fl_chart: ^0.63.0
   syncfusion_flutter_charts: ^23.1.36
   shake: ^2.2.0
+  google_mobile_ads: ^2.0.0
 
 dev_dependencies:
   flutter_test:
